--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-instagram",
   "version": "0.1.0",
   "private": true,
-  "homepages": "https://okhouja.github.io/react-instagram-clone/",
+  "homepage": "https://okhouja.github.io/react-instagram-clone/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
